--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "html2pdf.js": "^0.12.1",
     "jspdf": "^3.0.2",
     "jspdf-autotable": "^5.0.2",
+    "lodash.debounce": "^4.0.8",
     "pdf-lib": "^1.17.1",
     "pizzip": "^3.2.0",
     "react": "^19.1.1",
